--- a/3dviewer.html
+++ b/3dviewer.html
@@ -6,6 +6,19 @@
   <title>3D Model Viewer</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
+  <style>
+    /* Minimal page-specific styles so the viewer is full screen and controls are usable */
+    html, body { height: 100%; margin: 0; font-family: Arial, sans-serif; }
+    .navbar { background: #222; color: #fff; padding: 8px 12px; }
+    .navbar ul { list-style: none; margin: 0; padding: 0; display: flex; gap: 12px; }
+    .navbar a { color: #fff; text-decoration: none; }
+    #viewerWrap { position: relative; width: 100%; height: calc(100vh - 48px); background: #111; }
+    #modelViewer { width: 100%; height: 100%; display: block; }
+    .ui-overlay { position: absolute; top: 12px; right: 12px; display: flex; flex-direction: column; gap: 8px; z-index: 10; }
+    .ui-overlay button { background: rgba(255,255,255,0.9); border: none; padding: 8px 10px; border-radius: 6px; cursor: pointer; }
+    .ui-overlay input[type=file] { display: none; }
+    .drop-hint { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); color: #ddd; background: rgba(0,0,0,0.35); padding: 8px 12px; border-radius: 6px; pointer-events: none; z-index: 5; }
+  </style>
 </head>
 <body>
 
@@ -20,65 +33,155 @@
   </ul>
 </nav>
 
-<!-- 3D Viewer -->
-<div id="modelViewer"></div>
+<div id="viewerWrap">
+  <div id="modelViewer"></div>
+  <div class="ui-overlay">
+    <label for="fileInput">
+      <button id="btnLoad">Load model</button>
+    </label>
+    <input id="fileInput" type="file" accept=".glb,.gltf" />
+    <button id="btnFit">Fit to view</button>
+    <button id="btnZoomIn">Zoom in</button>
+    <button id="btnZoomOut">Zoom out</button>
+  </div>
+  <div class="drop-hint" id="dropHint">Drop .glb/.gltf file here to load</div>
+</div>
 
 <script type="module">
   import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js';
   import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/loaders/GLTFLoader.js';
   import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/controls/OrbitControls.js';
 
+  // Renderer, scene, camera
+  const container = document.getElementById('modelViewer');
   const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-  const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: false });
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.getElementById('modelViewer').appendChild(renderer.domElement);
+  scene.background = new THREE.Color(0x111111);
+
+  const renderer = new THREE.WebGLRenderer({ antialias: true });
+  renderer.setPixelRatio(window.devicePixelRatio);
+  renderer.setSize(container.clientWidth, container.clientHeight);
+  container.appendChild(renderer.domElement);
+
+  const camera = new THREE.PerspectiveCamera(50, container.clientWidth / container.clientHeight, 0.01, 1000);
+  camera.position.set(0, 0.5, 2);
 
   // Lights
-  const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-  directionalLight.position.set(5, 10, 7.5);
-  scene.add(directionalLight);
-
-  const ambientLight = new THREE.AmbientLight(0xffffff, 0.4); // Soft fill light
-  scene.add(ambientLight);
+  const hemi = new THREE.HemisphereLight(0xffffff, 0x444444, 1.0);
+  hemi.position.set(0, 1, 0);
+  scene.add(hemi);
+  const dir = new THREE.DirectionalLight(0xffffff, 0.8);
+  dir.position.set(5, 10, 7.5);
+  scene.add(dir);
 
   // Controls
   const controls = new OrbitControls(camera, renderer.domElement);
   controls.enableDamping = true;
-  controls.dampingFactor = 0.05;
+  controls.dampingFactor = 0.07;
+  controls.screenSpacePanning = false;
+  controls.minDistance = 0.2;
+  controls.maxDistance = 20;
 
-  // Instantiate the GLTFLoader
+  // Helpers
+  const grid = new THREE.GridHelper(10, 10, 0x222222, 0x111111);
+  grid.position.y = -1.0;
+  scene.add(grid);
+
+  let currentModel = null;
   const loader = new GLTFLoader();
 
-  loader.load('models/shvan_92.glb', function(gltf) {
-    // Center and scale the model
-    const model = gltf.scene;
-    // Compute bounding box
-    const box = new THREE.Box3().setFromObject(model);
-    const size = new THREE.Vector3();
-    box.getSize(size);
-    const maxDim = Math.max(size.x, size.y, size.z);
-    const scale = 2 / maxDim; // Scale model to fit in a 2x2x2 box
-    model.scale.setScalar(scale);
+  // Fit camera to object
+  function frameArea(sizeToFitOnScreen, box, camera) {
+    const center = box.getCenter(new THREE.Vector3());
+    const size = box.getSize(new THREE.Vector3());
+    const maxSize = Math.max(size.x, size.y, size.z);
+    const fitHeightDistance = maxSize / (2 * Math.atan(Math.PI * camera.fov / 360));
+    const fitWidthDistance = fitHeightDistance / camera.aspect;
+    const distance = sizeToFitOnScreen * Math.max(fitHeightDistance, fitWidthDistance);
 
-    // Center the model
-    box.setFromObject(model);
-    const center = new THREE.Vector3();
-    box.getCenter(center);
-    model.position.sub(center); // Move model to origin
-
-    scene.add(model);
-  }, undefined, function(error) {
-    console.error('Error loading model:', error);
-  });
-  window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.position.copy(center);
+    camera.position.x += distance;
+    camera.position.y += distance * 0.2;
+    camera.position.z += distance;
+    camera.near = Math.max(0.01, distance / 100);
+    camera.far = distance * 100;
     camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(window.devicePixelRatio);
+    camera.lookAt(center);
+    controls.target.copy(center);
+  }
+
+  function fitModelToView(object) {
+    const box = new THREE.Box3().setFromObject(object);
+    if (!box.isEmpty()) frameArea(1.2, box, camera);
+  }
+
+  // Load default model from repo if available
+  function loadDefaultModel() {
+    loader.load('models/shvan_92.glb', gltf => {
+      setModel(gltf.scene);
+    }, undefined, err => console.error(err));
+  }
+
+  function setModel(model) {
+    if (currentModel) scene.remove(currentModel);
+    currentModel = model;
+    // Ensure model cast/receive lights
+    model.traverse(node => {
+      if (node.isMesh) {
+        node.castShadow = true;
+        node.receiveShadow = true;
+      }
+    });
+    scene.add(model);
+    fitModelToView(model);
+  }
+
+  // File input and drag-drop
+  const fileInput = document.getElementById('fileInput');
+  const dropHint = document.getElementById('dropHint');
+  fileInput.addEventListener('change', e => {
+    const f = e.target.files[0];
+    if (f) loadFile(f);
+    fileInput.value = '';
   });
 
-  // Animate
+  function loadFile(file) {
+    const url = URL.createObjectURL(file);
+    loader.load(url, gltf => {
+      setModel(gltf.scene);
+      URL.revokeObjectURL(url);
+    }, undefined, err => {
+      console.error(err);
+      URL.revokeObjectURL(url);
+    });
+  }
+
+  // Drag & drop
+  ['dragenter', 'dragover'].forEach(evt => {
+    window.addEventListener(evt, ev => { ev.preventDefault(); dropHint.style.display = 'block'; });
+  });
+  ['dragleave', 'drop'].forEach(evt => {
+    window.addEventListener(evt, ev => { ev.preventDefault(); dropHint.style.display = 'none'; });
+  });
+  window.addEventListener('drop', ev => {
+    const f = ev.dataTransfer.files && ev.dataTransfer.files[0];
+    if (f) loadFile(f);
+  });
+
+  // Buttons
+  document.getElementById('btnFit').addEventListener('click', () => { if (currentModel) fitModelToView(currentModel); });
+  document.getElementById('btnZoomIn').addEventListener('click', () => { controls.dollyIn(1.2); controls.update(); });
+  document.getElementById('btnZoomOut').addEventListener('click', () => { controls.dollyOut(1.2); controls.update(); });
+
+  // Resize handling
+  function onWindowResize() {
+    const w = container.clientWidth, h = container.clientHeight;
+    camera.aspect = w / h;
+    camera.updateProjectionMatrix();
+    renderer.setSize(w, h);
+  }
+  window.addEventListener('resize', onWindowResize);
+
+  // Animation loop
   function animate() {
     requestAnimationFrame(animate);
     controls.update();
@@ -86,12 +189,8 @@
   }
   animate();
 
-  // Handle resize
-  window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-  });
+  // Init
+  loadDefaultModel();
 </script>
 
 </body>
